--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
     <title>Cameron Pittman: Portfolio</title>
 
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
-
-    <link href="css/style.css" rel="stylesheet" media="all">
-    <link href="css/mobile.css" rel="stylesheet" media="handheld">
-    <link href="css/print.css" rel="stylesheet" media="print">
+    <!-- <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet"> -->
 
     <script>
       (function(w,g){w['GoogleAnalyticsObject']=g;
@@ -22,6 +18,10 @@
       ga('create', 'UA-XXXX-Y');
       ga('send', 'pageview');
     </script>
+
+    <link href="css/style.css" rel="stylesheet" media="all">
+    <link href="css/mobile.css" rel="stylesheet" media="handheld">
+    <link href="css/print.css" rel="stylesheet" media="print">
     <script src="http://www.google-analytics.com/analytics.js" async></script>
     <script async src="js/perfmatters.js" async></script>
   </head>
