--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
     <link href="css/style.css" rel="stylesheet" media="all">
     <link href="css/mobile.css" rel="stylesheet" media="handheld">
     <link href="css/print.css" rel="stylesheet" media="print">
+    
     <script src="http://www.google-analytics.com/analytics.js" async></script>
-    <script src="js/perfmatters.js" async></script>
+    <script src="js/perfmatters-min.js" async></script>
   </head>
 
   <body>
