--- a/project-mobile.html
+++ b/project-mobile.html
@@ -24,7 +24,7 @@
     <link href="css/print.css" rel="stylesheet" media="print">
 
     <script src="http://www.google-analytics.com/analytics.js" async></script>
-    <script src="js/perfmatters.js" async></script>
+    <script src="js/perfmatters-min.js" async></script>
   </head>
 
   <body>
