--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       ga('send', 'pageview');
     </script>
 
-    <link href="css/style.css" rel="stylesheet" media="all">
-    <link href="css/mobile.css" rel="stylesheet" media="handheld">
-    <link href="css/print.css" rel="stylesheet" media="print">
-    
+    <link href="css/style-min.css" rel="stylesheet" media="all">
+    <link href="css/mobile-min.css" rel="stylesheet" media="handheld">
+    <link href="css/print-min.css" rel="stylesheet" media="print">
+
     <script src="http://www.google-analytics.com/analytics.js" async></script>
     <script src="js/perfmatters-min.js" async></script>
   </head>
