--- a/project-2048.html
+++ b/project-2048.html
@@ -10,7 +10,6 @@
     <script>
       (function(w,g){w['GoogleAnalyticsObject']=g;
       w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
-
       ga('create', 'UA-XXXX-Y');
       ga('send', 'pageview');
     </script>
@@ -25,7 +24,7 @@
 
   <body>
     <header>
-      <a href="/website-optimization"><img src="img/profilepic.png" height="70" width="70"></a>
+      <a href="/website-optimization/index.html"><img src="img/profilepic.png" height="70" width="70"></a>
       <p>Cameron Pittman<br><span>Course Developer</span></p>
     </header>
 
