--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <body>
     <header>
-      <a href="/website-optimization"><img src="img/profilepic.png" width="70" height="70"></a>
+      <a href="/website-optimization/index.html"><img src="img/profilepic.png" width="70" height="70"></a>
       <p>Cameron Pittman<br><span>Course Developer</span></p>
     </header>
 
