--- a/project-mobile.html
+++ b/project-mobile.html
@@ -7,21 +7,16 @@
     <meta name="author" content=" FILL ME IN ">
     <title>Cameron Pitman: Portfolio</title>
 
-    <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-    <!-- <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet"> -->
-
     <script>
       (function(w,g){w['GoogleAnalyticsObject']=g;
       w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
-
-      // TODO: replace with your Google Analytics profile ID.
       ga('create', 'UA-XXXX-Y');
       ga('send', 'pageview');
     </script>
 
-    <link href="css/style.css" rel="stylesheet" media="all">
-    <link href="css/mobile.css" rel="stylesheet" media="handheld">
-    <link href="css/print.css" rel="stylesheet" media="print">
+    <link href="css/style-min.css" rel="stylesheet" media="all">
+    <link href="css/mobile-min.css" rel="stylesheet" media="handheld">
+    <link href="css/print-min.css" rel="stylesheet" media="print">
 
     <script src="http://www.google-analytics.com/analytics.js" async></script>
     <script src="js/perfmatters-min.js" async></script>
@@ -29,7 +24,7 @@
 
   <body>
     <header>
-      <a href="/website-optimization"><img src="img/profilepic.png"></a>
+      <a href="/website-optimization/index.html"><img src="img/profilepic.png" height="70" width="70"></a>
       <p>Cameron Pittman<br><span>Course Developer</span></p>
     </header>
 
