change script tag to style

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       ga('send', 'pageview');
     </script>
 
-    <script type="text/css">
+    <style type="text/css">
       html {
         font-size: 100%;
         overflow-y: scroll;
@@ -59,7 +59,7 @@
         border-top: 1px solid #ccc;
       }
       footer span { float: right; font-style: italic; }
-    </script>
+    </style>
     
     <link href="css/mobile-min.css" rel="stylesheet" media="handheld">
     <link href="css/print-min.css" rel="stylesheet" media="print">
